// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UseToast should render different actions 1`] = `
"<div class=\\"toast-container \\"><div class=\\"toast  \\"><div class=\\"message\\">hello</div><div class=\\"action\\"><button type=\\"button\\" class=\\"btn \\" scale=\\"0.6666666666666666\\"><div class=\\"text\\">remove</div><style>
          .btn {
            box-sizing: border-box;
            display: inline-block;
            line-height: calc(2.083333333333333 * 16px);
            border-radius: 5px;
            font-weight: 400;
            font-size: calc(0.7291666666666666 * 16px);
            user-select: none;
            outline: none;
            text-transform: capitalize;
            justify-content: center;
            text-align: center;
            white-space: nowrap;
            transition: background-color 200ms ease 0ms, box-shadow 200ms ease 0ms,
              border 200ms ease 0ms, color 200ms ease 0ms;
            position: relative;
            overflow: hidden;
            color: #fff;
            background-color: #000;
            border: 1px solid #000;
            cursor: pointer;
            pointer-events: auto;
            box-shadow: none;
            --geist-ui-button-icon-padding: calc(0.6058333333333332 * 16px);
            --geist-ui-button-height: calc(2.083333333333333 * 16px);
            --geist-ui-button-color: #fff;
            --geist-ui-button-bg: #000;
            min-width: min-content;
            width: auto;
            height: calc(2.083333333333333 * 16px);
            padding: 0 calc(0.9583333333333331 * 16px) 0 calc(0.9583333333333331 * 16px);
            margin: 0 0 0 0;
          }

          .btn:hover,
          .btn:focus {
            color: #000;
            --geist-ui-button-color: #000;
            background-color: #fff;
            border-color: #000;
            cursor: pointer;
            pointer-events: auto;
            box-shadow: none;
            transform: translate3d(0px, 0px, 0px);
          }

          .btn :global(.text) {
            position: relative;
            z-index: 1;
            display: inline-flex;
            justify-content: center;
            align-items: center;
            text-align: center;
            line-height: inherit;
            top: -1px;
          }

          .btn :global(.text p),
          .btn :global(.text pre),
          .btn :global(.text div) {
            margin: 0;
          }
        </style></button><button type=\\"button\\" class=\\"btn \\" scale=\\"0.6666666666666666\\"><div class=\\"text\\">remove</div><style>
          .btn {
            box-sizing: border-box;
            display: inline-block;
            line-height: calc(2.083333333333333 * 16px);
            border-radius: 5px;
            font-weight: 400;
            font-size: calc(0.7291666666666666 * 16px);
            user-select: none;
            outline: none;
            text-transform: capitalize;
            justify-content: center;
            text-align: center;
            white-space: nowrap;
            transition: background-color 200ms ease 0ms, box-shadow 200ms ease 0ms,
              border 200ms ease 0ms, color 200ms ease 0ms;
            position: relative;
            overflow: hidden;
            color: #666;
            background-color: #fff;
            border: 1px solid #eaeaea;
            cursor: pointer;
            pointer-events: auto;
            box-shadow: none;
            --geist-ui-button-icon-padding: calc(0.6058333333333332 * 16px);
            --geist-ui-button-height: calc(2.083333333333333 * 16px);
            --geist-ui-button-color: #666;
            --geist-ui-button-bg: #fff;
            min-width: min-content;
            width: auto;
            height: calc(2.083333333333333 * 16px);
            padding: 0 calc(0.9583333333333331 * 16px) 0 calc(0.9583333333333331 * 16px);
            margin: 0 0 0 0;
          }

          .btn:hover,
          .btn:focus {
            color: #000;
            --geist-ui-button-color: #000;
            background-color: #fff;
            border-color: #000;
            cursor: pointer;
            pointer-events: auto;
            box-shadow: none;
            transform: translate3d(0px, 0px, 0px);
          }

          .btn :global(.text) {
            position: relative;
            z-index: 1;
            display: inline-flex;
            justify-content: center;
            align-items: center;
            text-align: center;
            line-height: inherit;
            top: -1px;
          }

          .btn :global(.text p),
          .btn :global(.text pre),
          .btn :global(.text div) {
            margin: 0;
          }
        </style></button></div><style>
          .toast {
            width: 420px;
            max-width: 90vw;
            max-height: 75px;
            display: flex;
            justify-content: space-between;
            align-items: center;
            color: #000;
            background-color: #fff;
            color: #000;
            border: 0;
            border-radius: 5px;
            padding: 16pt;
            position: absolute;
            bottom: 0;
            right: 0;
            opacity: 1;
            box-shadow: 0 5px 10px rgba(0, 0, 0, 0.12);
            transform: translate3d(0, 100%, 0px) scale(1);
            transition: transform 400ms ease 0ms, visibility 200ms ease 0ms,
              opacity 200ms ease 0ms;
          }

          .toast.visible {
            opacity: 1;
            transform: translate3d(0, calc(100% + -75px + -0px), -0px) scale(1);
          }

          .toast.hide {
            opacity: 0;
            visibility: hidden;
            pointer-events: none;
          }

          .message {
            align-items: center;
            height: 100%;
            transition: opacity 0.4s ease;
            font-size: 0.875rem;
            display: -webkit-box;
            word-break: break-all;
            padding-right: 8pt;
            overflow: hidden;
            max-height: 100%;
            text-overflow: ellipsis;
            -webkit-box-orient: vertical;
            -webkit-line-clamp: 2;
            line-height: 1.1rem;
          }

          .toast :global(button + button) {
            margin-left: 4pt;
          }
        </style></div><style>
        .toast-container {
          position: fixed;
          width: 420px;
          max-width: 90vw;
          bottom: 16pt;
          right: 16pt;
          z-index: 2000;
          transition: all 400ms ease;
          box-sizing: border-box;
        }

        .toast-container.hover {
          transform: translate3d(0, -10px, 0);
        }
      </style></div>"
`;

exports[`UseToast should work with different types 1`] = `
"<div class=\\"toast-container \\"><div class=\\"toast visible \\"><div class=\\"message\\">hello</div><div class=\\"action\\"></div><style>
          .toast {
            width: 420px;
            max-width: 90vw;
            max-height: 75px;
            display: flex;
            justify-content: space-between;
            align-items: center;
            color: #000;
            background-color: #0070f3;
            color: white;
            border: 0;
            border-radius: 5px;
            padding: 16pt;
            position: absolute;
            bottom: 0;
            right: 0;
            opacity: 1;
            box-shadow: 0 5px 10px rgba(0, 0, 0, 0.12);
            transform: translate3d(0, 100%, 0px) scale(1);
            transition: transform 400ms ease 0ms, visibility 200ms ease 0ms,
              opacity 200ms ease 0ms;
          }

          .toast.visible {
            opacity: 1;
            transform: translate3d(0, calc(100% + -75px + -0px), -0px) scale(1);
          }

          .toast.hide {
            opacity: 0;
            visibility: hidden;
            pointer-events: none;
          }

          .message {
            align-items: center;
            height: 100%;
            transition: opacity 0.4s ease;
            font-size: 0.875rem;
            display: -webkit-box;
            word-break: break-all;
            padding-right: 8pt;
            overflow: hidden;
            max-height: 100%;
            text-overflow: ellipsis;
            -webkit-box-orient: vertical;
            -webkit-line-clamp: 2;
            line-height: 1.1rem;
          }

          .toast :global(button + button) {
            margin-left: 4pt;
          }
        </style></div><style>
        .toast-container {
          position: fixed;
          width: 420px;
          max-width: 90vw;
          bottom: 16pt;
          right: 16pt;
          z-index: 2000;
          transition: all 400ms ease;
          box-sizing: border-box;
        }

        .toast-container.hover {
          transform: translate3d(0, -10px, 0);
        }
      </style></div>"
`;
